--- a/sources/templates/common/comp_file_control_popup.html
+++ b/sources/templates/common/comp_file_control_popup.html
@@ -1,8 +1,16 @@
 <div class="popup_fixed_container hidden" id="file_control_overlay">
-    <div class="file_control_content">
-        <div class="file_control_item">
-            <div class="file_control_icon"></div>
-            <div class="file_control_text"></div>
+    <div class="file_control_content" id="file_control_content">
+        <div class="file_control_item clickable">
+            <img class="file_control_icon" src="/sources?filename=icons/link.png">
+            <div class="file_control_text">复制下载链接</div>
+        </div>
+        <div class="file_control_item clickable">
+            <img class="file_control_icon" src="/sources?filename=icons/link.png">
+            <div class="file_control_text">复制相对路径</div>
+        </div>
+        <div class="file_control_item clickable">
+            <img class="file_control_icon" src="/sources?filename=icons/download.png">
+            <div class="file_control_text">下载</div>
         </div>
     </div>
 </div>
