--- a/sources/templates/common/comp_side_bar.html
+++ b/sources/templates/common/comp_side_bar.html
@@ -8,7 +8,7 @@
                 <div class="side_bar_icon">
                     <img src="/sources?filename=icons/open_folder_gray.png">
                 </div>
-                <a class="side_bar_text">文件管理器</a>
+                <a class="side_bar_text">文件仓库</a>
             </div>
         </dl>
     </dd>
