--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -3,7 +3,7 @@
         <div class="file_sys_header_icon clickable" id="file_sys_side_button">
             <img src="sources?filename=icons/menu.png">
         </div>
-        <div class="file_sys_header_title">文件管理器</div>
+        <div class="file_sys_header_title">文件仓库</div>
         <div class="file_sys_header_icon clickable">
             <img src="/sources?filename=icons/notification.png">
         </div>
