--- a/sources/templates/common/comp_file_control_popup.html
+++ b/sources/templates/common/comp_file_control_popup.html
@@ -1,14 +1,14 @@
 <div class="popup_fixed_container hidden" id="file_control_overlay">
     <div class="file_control_content" id="file_control_content">
-        <div class="file_control_item clickable">
+        <div class="file_control_item clickable" id="copy_full_url_button">
             <img class="file_control_icon" src="/sources?filename=icons/link.png">
-            <div class="file_control_text">复制下载链接</div>
+            <div class="file_control_text">复制完整链接</div>
         </div>
-        <div class="file_control_item clickable">
+        <div class="file_control_item clickable" id="copy_part_url_button">
             <img class="file_control_icon" src="/sources?filename=icons/link.png">
             <div class="file_control_text">复制相对路径</div>
         </div>
-        <div class="file_control_item clickable">
+        <div class="file_control_item clickable" id="file_download_button">
             <img class="file_control_icon" src="/sources?filename=icons/download.png">
             <div class="file_control_text">下载</div>
         </div>
