--- a/sources/templates/common/comp_file_control_popup.html
+++ b/sources/templates/common/comp_file_control_popup.html
@@ -12,5 +12,9 @@
             <img class="file_control_icon" src="/sources?filename=icons/download.png">
             <div class="file_control_text">下载</div>
         </div>
+        <div class="file_control_item clickable" id="file_edit_button">
+            <img class="file_control_icon" src="/sources?filename=icons/edit.png">
+            <div class="file_control_text">编辑</div>
+        </div>
     </div>
 </div>
