--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -62,3 +62,4 @@
 </div>
 {% include 'common/comp_file_add_popup.html'%}
 {% include 'common/comp_file_control_popup.html'%}
+{% include 'common/comp_file_edit_popup.html' %}
