--- a/sources/templates/common/comp_file_control_popup.html
+++ b/sources/templates/common/comp_file_control_popup.html
@@ -16,5 +16,9 @@
             <img class="file_control_icon" src="/sources?filename=icons/edit.png">
             <div class="file_control_text">编辑</div>
         </div>
+        <div class="file_control_item clickable" id="file_delete_button">
+            <img class="file_control_icon" src="/sources?filename=icons/delete.png">
+            <div class="file_control_text">删除</div>
+        </div>
     </div>
 </div>
