--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -12,6 +12,7 @@
     {% include 'common/comp_side_bar.html' %}
     {% include 'common/page_file_system.html' %}
     {% include 'common/comp_popup_message.html' %}
+    {% include 'common/comp_confirm_popup.html' %}
 {% endblock %}
 
 {% block js_file %}
