--- a/sources/templates/common/comp_confirm_popup.html
+++ b/sources/templates/common/comp_confirm_popup.html
@@ -2,8 +2,8 @@
     <div class="confirm_popup_content" id="confirm_popup_content">
         <div class="confirm_popup_text" id="confirm_pop_text"></div>
         <div class="confirm_control_item">
-            <button class="confirm_popup_button" id="confirm_popup_button"></button>
-            <button class="confirm_popup_button" id="cancel_popup_button"></button>
+            <button class="confirm_popup_button" id="confirm_popup_button">确认</button>
+            <button class="confirm_popup_button" id="cancel_popup_button">取消</button>
         </div>
     </div>
 </div>
