--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="file_search_bar">
                     <img src="/sources?filename=icons/magnifier.png" class="file_search_icon">
-                    <input placeholder="输入文本搜索" class="file_search_input">
+                    <input placeholder="输入文本搜索" class="file_search_input" id="file_search_input">
                 </div>
             </div>
             <div class="file_sys_list_body">
