--- a/sources/templates/common/comp_side_bar.html
+++ b/sources/templates/common/comp_side_bar.html
@@ -1,15 +1,17 @@
-<div class="side_bar_container" id="side_bar_container">
-    <div class="side_bar_logo">
-        <img src="/sources?filename=icons/logo.png" class="side_bar_logo_img">
-    </div>
-    <dd class="side_bar_list">
-        <dl class="side_bar_row">
-            <div class="side_bar_item clickable" id="side_bar_file_sys">
-                <div class="side_bar_icon">
-                    <img src="/sources?filename=icons/open_folder_gray.png">
+<div class="popup_fixed_container hidden" id="side_bar_overlay">
+    <div class="side_bar_container side_mobile_hidden" id="side_bar_container">
+        <div class="side_bar_logo">
+            <img src="/sources?filename=icons/logo.png" class="side_bar_logo_img">
+        </div>
+        <dd class="side_bar_list">
+            <dl class="side_bar_row">
+                <div class="side_bar_item clickable" id="side_bar_file_sys">
+                    <div class="side_bar_icon">
+                        <img src="/sources?filename=icons/open_folder_gray.png">
+                    </div>
+                    <a class="side_bar_text">文件仓库</a>
                 </div>
-                <a class="side_bar_text">文件仓库</a>
-            </div>
-        </dl>
-    </dd>
+            </dl>
+        </dd>
+    </div>
 </div>
