--- a/sources/templates/common/comp_page_selector.html
+++ b/sources/templates/common/comp_page_selector.html
@@ -12,10 +12,10 @@
     </div>
     <div class="page_select_limit">
         <select class="page_select_limit_list" id="{% block page_select_limit %}page_select_limit{% endblock %}">
-            <option value="10" selected>10</option>
+            <option value="10">10</option>
             <option value="20" selected>20</option>
-            <option value="50" selected>50</option>
-            <option value="100" selected>100</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
         </select>
         <a class="page_select_text">项/每页</a>
     </div>
