--- a/sources/templates/common/comp_side_bar.html
+++ b/sources/templates/common/comp_side_bar.html
@@ -1,5 +1,5 @@
-<div class="popup_fixed_container hidden" id="side_bar_overlay">
-    <div class="side_bar_container side_mobile_hidden" id="side_bar_container">
+<div class="side_bar_overlay" id="side_bar_overlay">
+    <div class="side_bar_container" id="side_bar_container">
         <div class="side_bar_logo">
             <img src="/sources?filename=icons/logo.png" class="side_bar_logo_img">
         </div>
