--- a/sources/static/css/side_bar_style.css
+++ b/sources/static/css/side_bar_style.css
@@ -21,6 +21,7 @@
     grid-template-rows: var(--header-height) 1fr;
     transition: transform 1s ease;
     position: fixed;
+    background-color: var(--theme-main-color);
 }
 .side_bar_logo{
     /*侧边栏Logo*/
@@ -104,6 +105,17 @@
     text-overflow: ellipsis;
     font-size: var(--side-bar-font-size);
 }
+.side_bar_overlay{
+    height: 100%;
+    width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    position: fixed;
+    z-index: 1;
+    pointer-events: none;
+    display: block;
+}
+
 
 .side_bar_expand{
     /*侧边栏占居的空间*/
@@ -112,28 +124,4 @@
 .side_bar_hidden{
     /*隐藏侧边栏*/
     transform: translateX(-100%);  /*将侧边栏移出*/
-}
-.side_mobile_hidden{
-    transform: translateX(-100%);  /*将侧边栏移出*/
-}
-
-/*响应式*/
-@media (max-width: 399px), (max-device-width: 399px){
-    .side_bar_expand{
-        /*侧边栏占居的空间*/
-        padding-left: 0;
-    }
-    .side_bar_container{
-        background-color: var(--theme-main-color);
-    }
-}
-
-@media (min-width: 400px), (min-device-width: 400px) {
-    .side_mobile_hidden{
-        transform: translateX(0);
-    }
-    .side_bar_hidden{
-        /*隐藏侧边栏*/
-        transform: translateX(-100%);  /*将侧边栏移出*/
-    }
 }
