--- a/sources/templates/common/comp_page_selector.html
+++ b/sources/templates/common/comp_page_selector.html
@@ -2,11 +2,11 @@
     <div class="page_select_icon" id="{% block last_page_id %}last_page_button{% endblock %}">
         <img class="page_select_img" src="/sources?filename=icons/last_page.png">
     </div>
-    <div class="page_select_info">
+    <form class="page_select_info">
         <a class="page_select_text">第</a>
         <input class="page_select_input" type="text" value="1" id="{% block page_input_id %}page_input_id{% endblock %}">
         <a class="page_select_text" id="{% block page_text_id %}page_text_id{% endblock %}">页/共1页</a>
-    </div>
+    </form>
     <div class="page_select_icon" id="{% block next_page_id %}next_page_button{% endblock %}">
         <img class="page_select_img" src="/sources?filename=icons/next_page.png">
     </div>
