--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -36,10 +36,10 @@
                 <div class="file_path_bar" id="file_path_bar">
                     <img src="/sources?filename=icons/open_folder.png" class="file_search_icon">
                 </div>
-                <div class="file_search_bar">
+                <form class="file_search_bar">
                     <img src="/sources?filename=icons/magnifier.png" class="file_search_icon">
                     <input placeholder="输入文本搜索" class="file_search_input" id="file_search_input">
-                </div>
+                </form>
             </div>
             <div class="file_sys_list_body">
                 <div class="file_table_header">
