添加手机端文件菜单的展开和隐藏

--- a/sources/static/css/styles.css
+++ b/sources/static/css/styles.css
@@ -133,6 +133,10 @@
     /*点击事件穿透该元素*/
     pointer-events: none;
 }
+.only399{
+    /*只有低于399px宽度才显示*/
+    display: none;
+}
 
 /*响应式*/
 @media (max-width: 399px), (max-device-width: 399px){
