--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -1,5 +1,5 @@
 <div class="file_sys_container side_bar_expand" id="file_sys_container">
-    <div class="file_sys_header">
+    <div class="file_sys_header" id="file_sys_header">
         <div class="file_sys_header_icon clickable" id="file_sys_side_button">
             <img src="sources?filename=icons/menu.png">
         </div>
@@ -14,8 +14,8 @@
             <img src="/sources?filename=icons/user.png">
         </div>
     </div>
-    <div class="file_sys_body">
-        <div class="file_sys_menu">
+    <div class="file_sys_body" id="file_sys_body">
+        <div class="file_sys_menu" id="file_sys_menu">
             <button class="file_sys_menu_button clickable" id="file_add_pop_button">+新增</button>
             <dd class="file_sys_menu_list">
                 <dl class="file_sys_menu_row">
@@ -36,6 +36,7 @@
                 <div class="file_path_bar" id="file_path_bar">
                     <img src="/sources?filename=icons/open_folder.png" class="file_search_icon">
                 </div>
+                <img class="file_control_img only399" src="/sources?filename=icons/dashboard.png" id="file_menu_pop_button">
                 <form class="file_search_bar">
                     <img src="/sources?filename=icons/magnifier.png" class="file_search_icon">
                     <input placeholder="输入文本搜索" class="file_search_input" id="file_search_input">
