--- a/sources/static/css/responsive.css
+++ b/sources/static/css/responsive.css
@@ -33,6 +33,11 @@
     /*文件系统*/
     .file_sys_menu{
         display: none;
+        position: fixed;
+        min-width: calc( var(--file-enum-width) + var(--element-gap) * 2 );
+        width: calc( 100% - var(--element-gap) * 2 );
+        height: calc( 100% - var(--element-margin) * 2 - 70px );
+        border: 2px solid var(--theme-part-color);
     }
     .file_table_header{
         grid-template-columns: 1fr 50px;
@@ -70,9 +75,34 @@
         grid-template-rows: calc( var(--file-search-height) * 2.25 ) 1fr
     }
     .file_sys_search_bar{
-        grid-template-columns: 1fr;
+        grid-template-columns: var(--icon-base-size) 1fr;
         grid-template-rows: 1fr 1fr;
         grid-gap: var(--element-margin);
+    }
+    .file_sys_search_bar>*:nth-child(1){
+        grid-column: 1 / 3;
+    }
+    .file_add_content{
+        width: calc( 100% - var(--element-margin) * 2 );
+    }
+
+    /*确认弹窗*/
+    .confirm_popup_content{
+        width: calc( 100% - var(--element-margin) * 2 );
+        padding: var(--element-margin);
+    }
+    .confirm_control_item{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: var(--element-margin);
+    }
+    .confirm_popup_button{
+        width: 100%;
+    }
+
+    /*通用*/
+    .only399{
+        display: block;
     }
 }
 
