--- a/sources/static/css/responsive.css
+++ b/sources/static/css/responsive.css
@@ -1,5 +1,5 @@
 /*响应式*/
-@media (max-width: 399px), (max-device-width: 399px){
+@media (max-width: 1300px), (max-device-width: 1300px){
     /*侧边栏*/
     .side_bar_container{
         transform: translateX(-100%);
@@ -15,6 +15,137 @@
         width: 100%;
         display: none;
     }
+}
+
+/*响应式*/
+@media (max-width: 999px), (max-device-width: 999px){
+    /*登录页面*/
+    .login_body_container{
+        grid-template-columns: 1fr;
+    }
+    .login_background_image{
+        display: none;
+    }
+    .login_panel{
+        width: 100%;
+        padding-left: var(--element-gap);
+        padding-right: var(--element-gap);
+        box-sizing: border-box;
+    }
+
+    /*文件系统*/
+    .file_sys_container{
+        grid-template-rows: calc( var(--file-sys-header-height) * 0.75 ) 1fr;
+    }
+    .file_sys_header{
+        padding: var(--element-margin);
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
+    .file_sys_menu{
+        display: none;
+        position: fixed;
+        width: calc( var(--file-enum-width) * 1.05 );
+        height: calc( 100% - var(--element-margin) * 2 - 70px );
+        border: 2px solid var(--theme-part-color);
+    }
+    .file_sys_body{
+        padding-left: var(--element-margin);
+        padding-right: var(--element-margin);
+        grid-template-columns: 1fr;
+    }
+    .file_sys_search_bar{
+        grid-template-columns: var(--icon-base-size) 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-gap: var(--element-margin);
+    }
+    .file_sys_search_bar>*:nth-child(1){
+        grid-column: 1 / 3;
+    }
+    .file_sys_panel{
+        grid-gap: var(--element-margin);
+        grid-template-rows: calc( var(--file-search-height) * 2.25 ) 1fr
+    }
+
+    /*通用*/
+    .only999{
+        display: block;
+    }
+}
+
+/*响应式*/
+@media (max-width: 700px), (max-device-width: 700px){
+    /*文件系统*/
+    .file_table_header{
+        grid-template-columns: 1fr 180px 90px 50px;
+    }
+    .file_table_header>*:nth-child(4){
+        display: none;
+    }
+    .file_table_item{
+        grid-template-columns: 1fr 180px 90px 50px;
+    }
+    .file_table_item>*:nth-child(4){
+        display: none;
+    }
+    .file_add_content{
+        width: calc( 100% - var(--element-margin) * 2 );
+    }
+}
+
+/*响应式*/
+@media (max-width: 600px), (max-device-width: 600px){
+    /*文件系统*/
+    .file_table_header{
+        grid-template-columns: 1fr 180px 50px;
+    }
+    .file_table_header>*:nth-child(3), .file_table_header>*:nth-child(4){
+        display: none;
+    }
+    .file_table_item{
+        grid-template-columns: 1fr 180px 50px;
+    }
+    .file_table_item>*:nth-child(3), .file_table_item>*:nth-child(4){
+        display: none;
+    }
+}
+
+@media (max-width: 500px), (max-device-width: 500px){
+    /*确认弹窗*/
+    .confirm_popup_content{
+        width: calc( 100% - var(--element-margin) * 2 );
+        padding: var(--element-margin);
+    }
+    .confirm_control_item{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: var(--element-margin);
+    }
+    .confirm_popup_button{
+        width: 100%;
+    }
+}
+
+@media (max-width: 460px), (max-device-width: 460px){
+    /*文件系统*/
+    .file_table_header{
+        grid-template-columns: 1fr 50px;
+    }
+    .file_sys_header>*:nth-child(3),.file_sys_header>*:nth-child(4){
+        display: none;
+    }
+    .file_table_header>*:nth-child(2),.file_table_header>*:nth-child(3),.file_table_header>*:nth-child(4){
+        display: none;
+    }
+    .file_table_item{
+        grid-template-columns: 1fr 50px;
+    }
+    .file_table_item>*:nth-child(2),.file_table_item>*:nth-child(3),.file_table_item>*:nth-child(4){
+        display: none;
+    }
+    .file_sys_header{
+        grid-template-columns: var(--header-icon-size) 1fr var(--header-icon-size);
+    }
 
     /*分页*/
     .page_select_container{
@@ -29,97 +160,5 @@
     }
     .page_select_icon{
         margin: 0px;
-    }
-
-    /*文件系统*/
-    .file_sys_menu{
-        display: none;
-        position: fixed;
-        min-width: calc( var(--file-enum-width) + var(--element-gap) * 2 );
-        width: calc( 100% - var(--element-gap) * 2 );
-        height: calc( 100% - var(--element-margin) * 2 - 70px );
-        border: 2px solid var(--theme-part-color);
-    }
-    .file_table_header{
-        grid-template-columns: 1fr 50px;
-    }
-    .file_table_header>*:nth-child(2),.file_table_header>*:nth-child(3),.file_table_header>*:nth-child(4){
-        display: none;
-    }
-    .file_table_item{
-        grid-template-columns: 1fr 50px;
-    }
-    .file_table_item>*:nth-child(2),.file_table_item>*:nth-child(3),.file_table_item>*:nth-child(4){
-        display: none;
-    }
-    .file_sys_header{
-        padding: var(--element-margin);
-        padding-top: 0px;
-        padding-bottom: 0px;
-        grid-template-columns: var(--header-icon-size) 1fr var(--header-icon-size);
-    }
-    .file_sys_header>*:nth-child(3),.file_sys_header>*:nth-child(4){
-        display: none;
-    }
-    .file_sys_body{
-        padding-left: var(--element-margin);
-        padding-right: var(--element-margin);
-    }
-    .file_sys_body{
-        grid-template-columns: 1fr;
-    }
-    .file_sys_container{
-        grid-template-rows: calc( var(--file-sys-header-height) * 0.75 ) 1fr;
-    }
-    .file_sys_panel{
-        grid-gap: var(--element-margin);
-        grid-template-rows: calc( var(--file-search-height) * 2.25 ) 1fr
-    }
-    .file_sys_search_bar{
-        grid-template-columns: var(--icon-base-size) 1fr;
-        grid-template-rows: 1fr 1fr;
-        grid-gap: var(--element-margin);
-    }
-    .file_sys_search_bar>*:nth-child(1){
-        grid-column: 1 / 3;
-    }
-    .file_add_content{
-        width: calc( 100% - var(--element-margin) * 2 );
-    }
-
-    /*确认弹窗*/
-    .confirm_popup_content{
-        width: calc( 100% - var(--element-margin) * 2 );
-        padding: var(--element-margin);
-    }
-    .confirm_control_item{
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: var(--element-margin);
-    }
-    .confirm_popup_button{
-        width: 100%;
-    }
-
-    /*通用*/
-    .only399{
-        display: block;
-    }
-}
-
-
-/*响应式*/
-@media (max-width: 999px), (max-device-width: 999px){
-    .login_body_container{
-        grid-template-columns: 1fr;
-    }
-    .login_background_image{
-        display: none;
-    }
-    .login_panel{
-        width: 100%;
-        padding-left: var(--element-gap);
-        padding-right: var(--element-gap);
-        box-sizing: border-box;
     }
 }
