重写侧边栏js

--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -1,4 +1,4 @@
-<div class="file_sys_container side_bar_expand" id="file_sys_container">
+<div class="file_sys_container side_bar_expand padding_trans" id="file_sys_container">
     <div class="file_sys_header" id="file_sys_header">
         <div class="file_sys_header_icon clickable" id="file_sys_side_button">
             <img src="sources?filename=icons/menu.png">
