--- a/sources/static/css/styles.css
+++ b/sources/static/css/styles.css
@@ -134,6 +134,9 @@
     /*只有低于999px宽度才显示*/
     display: none;
 }
+.spin_holder{
+    position: relative;
+}
 
 /*响应式*/
 @media (max-width: 399px), (max-device-width: 399px){
