--- a/sources/templates/common/page_login.html
+++ b/sources/templates/common/page_login.html
@@ -9,8 +9,8 @@
             <input type="text" id="account" name="account" required placeholder="请输入帐号" class="login_field_input" autocomplete="username">
             <label for="password" class="login_label">密码</label>
             <input type="password" id="password" name="password" required placeholder="请输入密码" class="login_field_input" autocomplete="current-password">
-            <div class="login_button_panel">
-                <input type="submit" value="登录" class="login_button clickable">
+            <div class="login_button_panel spin_holder" id="login_button_panel">
+                <input type="submit" value="登录" class="login_button clickable" >
             </div>
         </form>
     </div>
