--- a/sources/static/css/spinner.css
+++ b/sources/static/css/spinner.css
@@ -44,3 +44,10 @@
     background-color: rgba(128,128,128,0.5);
     border-radius: var(--border-min-radius);
 }
+
+.spin_panel_light{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128,128,128,0.2);
+}
