--- a/sources/static/css/styles.css
+++ b/sources/static/css/styles.css
@@ -61,7 +61,7 @@
 }
 .body_theme{
     /*主题Body*/
-    height: 100%;
+    height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
