--- a/sources/templates/common/comp_confirm_popup.html
+++ b/sources/templates/common/comp_confirm_popup.html
@@ -2,7 +2,9 @@
     <div class="confirm_popup_content" id="confirm_popup_content">
         <div class="confirm_popup_text" id="confirm_pop_text"></div>
         <div class="confirm_control_item">
-            <button class="confirm_popup_button" id="confirm_popup_button">确认</button>
+            <div class="confirm_button_panel spin_holder" id="confirm_spin_panel">
+                <button class="confirm_popup_button" id="confirm_popup_button">确认</button>
+            </div>
             <button class="confirm_popup_button" id="cancel_popup_button">取消</button>
         </div>
     </div>
