--- a/sources/templates/common/comp_file_add_popup.html
+++ b/sources/templates/common/comp_file_add_popup.html
@@ -17,7 +17,9 @@
                 <input id="file_add_item_button" type="button" value="选择文件" class="file_add_item_button">
             </div>
             <div class="file_button_row">
-                <input id="file_add_confirm" type="submit" value="确认" class="file_add_button">
+                <div class="file_button_panel spin_holder" id="file_add_button_panel">
+                    <input id="file_add_confirm" type="submit" value="确认" class="file_add_button">
+                </div>
                 <input id="file_add_cancel" type="button" value="取消" class="file_add_button">
             </div>
         </form>
@@ -28,7 +30,9 @@
             <select id="folder_add_folder_select" required class="file_add_choose">
             </select>
             <div class="file_button_row">
-                <input id="folder_add_confirm" type="submit" value="确认" class="file_add_button">
+                <div class="file_button_panel spin_holder" id="folder_add_button_panel">
+                    <input id="folder_add_confirm" type="submit" value="确认" class="file_add_button">
+                </div>
                 <input id="folder_add_cancel" type="button" value="取消" class="file_add_button">
             </div>
         </form>
