--- a/sources/templates/common/comp_file_edit_popup.html
+++ b/sources/templates/common/comp_file_edit_popup.html
@@ -10,7 +10,9 @@
             <select id="file_edit_folder_select" required class="file_add_choose">
             </select>
             <div class="file_button_row">
-                <input id="file_edit_confirm" type="submit" value="确认" class="file_add_button">
+                <div class="file_button_panel spin_holder" id="file_edit_button_panel">
+                    <input id="file_edit_confirm" type="submit" value="确认" class="file_add_button">
+                </div>
                 <input id="file_edit_cancel" type="button" value="取消" class="file_add_button">
             </div>
         </form>
