--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -50,7 +50,7 @@
                     <div class="file_table_header_text">大小</div>
                     <div class="file_table_header_text">操作</div>
                 </div>
-                <dd class="file_table_body">
+                <dd class="file_table_body spin_holder" id="file_table_spinner">
                     <dl class="file_table_row" id="file_table_body">
                     </dl>
                 </dd>
