添加 图片显示功能；重构 事件绑定方法；

--- a/sources/templates/common/comp_confirm_popup.html
+++ b/sources/templates/common/comp_confirm_popup.html
@@ -1,4 +1,4 @@
-<div class="popup_container hidden" id="confirm_popup_overlay">
+<div class="popup_container_gray hidden" id="confirm_popup_overlay">
     <div class="confirm_popup_content" id="confirm_popup_content">
         <div class="confirm_popup_text" id="confirm_pop_text"></div>
         <div class="confirm_control_item">
