--- a/sources/static/css/styles.css
+++ b/sources/static/css/styles.css
@@ -85,6 +85,20 @@
     position: fixed;
     z-index: 1;
 }
+/*弹窗*/
+.popup_container_gray{
+    height: 100%;
+    width: 100%;
+    max-height: 100%;
+    overflow-y: auto;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 1;
+    background-color: rgba(0,0,0,0.5);
+}
 .popup_fixed_container{
     height: 100%;
     width: 100%;
@@ -92,6 +106,7 @@
     overflow-y: auto;
     position: fixed;
     z-index: 1;
+    background-color: rgba(0,0,0,0.5);
 }
 
 /*动画*/
