--- a/sources/templates/common/comp_file_add_popup.html
+++ b/sources/templates/common/comp_file_add_popup.html
@@ -1,4 +1,4 @@
-<div class="popup_container hidden" id="file_add_popup_overlay">
+<div class="popup_container_gray hidden" id="file_add_popup_overlay">
     <div class="file_add_content" id="file_add_content">
         <div class="file_add_header">
             <a class="file_add_header_text" id="file_add_header_text">新增文件</a>
