--- a/sources/templates/common/comp_file_edit_popup.html
+++ b/sources/templates/common/comp_file_edit_popup.html
@@ -1,4 +1,4 @@
-<div class="popup_container hidden" id="file_edit_popup_overlay">
+<div class="popup_container_gray hidden" id="file_edit_popup_overlay">
     <div class="file_add_content" id="file_edit_content">
         <div class="file_add_header">
             <a class="file_add_header_text" id="file_edit_header_text">编辑文件</a>
