--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -13,6 +13,7 @@
     {% include 'common/page_file_system.html' %}
     {% include 'common/comp_popup_message.html' %}
     {% include 'common/comp_confirm_popup.html' %}
+    {% include 'common/comp_image_display.html' %}
 {% endblock %}
 
 {% block js_file %}
