--- a/sources/static/css/file_sys_style.css
+++ b/sources/static/css/file_sys_style.css
@@ -364,13 +364,13 @@
 }
 .file_add_header{
     width: 100%;
-    height: var(--header-height);
+    height: 54px;
     font-size: var(--text-media-size);
     font-weight: bold;
     color: var(--text-main-color);
     display: flex;
     align-items: center;
-    margin-bottom: var(--element-gap);
+    margin-bottom: var(--element-margin);
 }
 .file_add_header_text{
     width: 100%;
@@ -415,7 +415,7 @@
     width: 100%;
     height: 44px;
     font-size: var(--main-text-size);
-    margin-bottom: var(--element-gap);
+    margin-bottom: var(--element-margin);
     padding-left: var(--element-margin);
     padding-right: var(--element-margin);
     border-radius: var(--border-min-radius);
@@ -438,8 +438,8 @@
 }
 .file_add_item_button{
     width: var(--file-item-button-width);
-    height: var(--login-item-height);
-    margin-bottom: var(--element-gap);
+    height: 44px;
+    margin-bottom: var(--element-margin);
     font-size: var(--main-text-size);
     box-sizing: border-box;
     border: var(--border-base-width) solid var(--theme-part-color);
