--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -16,7 +16,7 @@
     </div>
     <div class="file_sys_body" id="file_sys_body">
         <div class="file_sys_menu" id="file_sys_menu">
-            <button class="file_sys_menu_button clickable" id="file_add_pop_button">+新增</button>
+            <button class="file_sys_menu_button clickable" id="file_add_pop_button">+上传文件</button>
             <dd class="file_sys_menu_list">
                 <dl class="file_sys_menu_row">
                     <div class="file_sys_menu_label">
@@ -27,6 +27,15 @@
                             <img src="/sources?filename=icons/all_file.png">
                         </div>
                         <a class="file_sys_menu_text clickable">所有文件</a>
+                    </div>
+                    <div class="file_sys_menu_label">
+                        <span>操作</span>
+                    </div>
+                    <div class="file_sys_menu_item clickable" id="add_text_button">
+                        <div class="file_sys_menu_icon">
+                            <img src="/sources?filename=icons/all_file.png">
+                        </div>
+                        <a class="file_sys_menu_text clickable">创建文本</a>
                     </div>
                 </dl>
             </dd>
