--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -14,6 +14,7 @@
     {% include 'common/comp_popup_message.html' %}
     {% include 'common/comp_confirm_popup.html' %}
     {% include 'common/comp_image_display.html' %}
+    {% include 'common/comp_text_add_popup.html' %}
 {% endblock %}
 
 {% block js_file %}
