--- a/sources/templates/common/comp_text_add_popup.html
+++ b/sources/templates/common/comp_text_add_popup.html
@@ -1,5 +1,7 @@
 <div class="popup_container_gray hidden" id="text_add_popup_overlay">
     <div class="text_add_content" id="text_add_content">
-
+        <div class="file_add_header">
+            <a class="file_add_header_text" id="file_edit_header_text">新增文本</a>
+        </div>
     </div>
 </div>
