--- a/sources/templates/common/page_file_system.html
+++ b/sources/templates/common/page_file_system.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="file_sys_menu_item clickable" id="add_text_button">
                         <div class="file_sys_menu_icon">
-                            <img src="/sources?filename=icons/all_file.png">
+                            <img src="/sources?filename=icons/text.png">
                         </div>
                         <a class="file_sys_menu_text clickable">创建文本</a>
                     </div>
