--- a/sources/templates/common/comp_file_edit_popup.html
+++ b/sources/templates/common/comp_file_edit_popup.html
@@ -1,13 +1,13 @@
 <div class="popup_container_gray hidden" id="file_edit_popup_overlay">
-    <div class="file_add_content" id="file_edit_content">
-        <div class="file_add_header">
-            <a class="file_add_header_text" id="file_edit_header_text">编辑文件</a>
+    <div class="form_popup_content" id="file_edit_content">
+        <div class="form_popup_header">
+            <a class="form_popup_header_text" id="file_edit_header_text">编辑文件</a>
         </div>
-        <form class="file_add_form" id="file_edit_form">
-            <label for="file_edit_name" class="file_add_label">文件名</label>
-            <input id="file_edit_name" type="text" required placeholder="请输入文件名" class="file_add_field">
-            <label for="file_edit_folder_select" class="file_add_label">文件夹</label>
-            <select id="file_edit_folder_select" required class="file_add_choose">
+        <form class="form_popup_main" id="file_edit_form">
+            <label for="file_edit_name" class="form_field_label">文件名</label>
+            <input id="file_edit_name" type="text" required placeholder="请输入文件名" class="form_input_field">
+            <label for="file_edit_folder_select" class="form_field_label">文件夹</label>
+            <select id="file_edit_folder_select" required class="form_choose_field">
             </select>
             <div class="file_button_row">
                 <div class="file_button_panel spin_holder" id="file_edit_button_panel">
