--- a/sources/static/css/common/comp_popup_message.css
+++ b/sources/static/css/common/comp_popup_message.css
@@ -76,3 +76,23 @@
     padding-top: var(--element-margin);
     padding-bottom: var(--element-margin);
 }
+
+/*动画*/
+@keyframes slide-down{
+    from{
+        opacity: 0,
+        transform: translateY(-20px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes fade-out{
+    from{
+        opacity: 1,
+    }
+    to{
+        opacity: 0;
+    }
+}
