--- a/sources/templates/common/page_login.html
+++ b/sources/templates/common/page_login.html
@@ -1,5 +1,5 @@
 <div class="login_body_container">
-    <div class="login_background_image"></div>
+    <div class="comp_background_image"></div>
     <div class="login_panel">
         <div class="login_logo">
             <img src="/sources?filename=icons/logo.png" class="login_logo_img">
