--- a/sources/templates/login.html
+++ b/sources/templates/login.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block body_content %}
-    {% include 'common/page_login.html' %}
+    {% include 'login/page_login.html' %}
     {% include 'common/comp_popup_message.html' %}
 {% endblock %}
 
