--- a/sources/static/css/common/comp_default.css
+++ b/sources/static/css/common/comp_default.css
@@ -64,6 +64,13 @@
     background-color: rgba(0,0,0,0.5);
 }
 
+/*响应式*/
+@media (max-width: 1300px), (max-device-width: 1300px){
+    .click_throw{
+        pointer-events: auto;
+    }
+}
+
 @media (max-width: 999px), (max-device-width: 999px){
     .comp_background_image{
         display: none;
