--- a/sources/templates/file_system/comp_popup_file_edit.html
+++ b/sources/templates/file_system/comp_popup_file_edit.html
@@ -9,11 +9,11 @@
             <label for="file_edit_folder_select" class="form_field_label">文件夹</label>
             <select id="file_edit_folder_select" required class="form_choose_field">
             </select>
-            <div class="file_button_row">
-                <div class="file_button_panel spin_holder" id="file_edit_button_panel">
-                    <input id="file_edit_confirm" type="submit" value="确认" class="file_add_button">
+            <div class="form_button_row">
+                <div class="form_button_spinner spin_holder" id="file_edit_button_panel">
+                    <input id="file_edit_confirm" type="submit" value="确认" class="form_button">
                 </div>
-                <input id="file_edit_cancel" type="button" value="取消" class="file_add_button">
+                <input id="file_edit_cancel" type="button" value="取消" class="form_button">
             </div>
         </form>
     </div>
