--- a/sources/static/css/common/comp_popup_confirm.css
+++ b/sources/static/css/common/comp_popup_confirm.css
@@ -49,3 +49,19 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: var(--element-gap);
 }
+
+@media (max-width: 500px), (max-device-width: 500px){
+    /*确认弹窗*/
+    .confirm_popup_content{
+        width: calc( 100% - var(--element-margin) * 2 );
+        padding: var(--element-margin);
+    }
+    .confirm_control_item{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-gap: var(--element-margin);
+    }
+    .confirm_popup_button{
+        width: 100%;
+    }
+}
