--- a/sources/static/css/common/comp_popup_form.css
+++ b/sources/static/css/common/comp_popup_form.css
@@ -55,7 +55,7 @@
     width: 100%;
     height: 44px;
     font-size: var(--main-text-size);
-    margin-bottom: var(--element-gap);
+    margin-bottom: var(--element-margin);
     padding-left: var(--element-margin);
     padding-right: var(--element-margin);
     border-radius: var(--border-min-radius);
@@ -76,4 +76,87 @@
     box-sizing: border-box;
     font-family: 'poppins';
     border-width: var(--border-base-width);
+}
+.form_choose_item{
+    width: 100%;
+    height: var(--login-item-height);
+    font-size: var(--main-text-size);
+    margin-bottom: var(--element-gap);
+    padding-left: var(--element-margin);
+    padding-right: var(--element-margin);
+    border-radius: var(--border-min-radius);
+    border-color: var(--text-main-color);
+    box-sizing: border-box;
+    font-family: 'poppins';
+}
+.form_button_row{
+    margin-top: var(--element-gap);
+    display: flex;
+}
+.form_button_row>*:nth-child(1){
+    margin-right: var(--element-gap);
+}
+.form_button_spinner{
+    height: 44px;
+    width: 100%;
+}
+.form_button{
+    width: 100%;
+    height: 44px;
+    font-size: var(--main-text-size);
+    box-sizing: border-box;
+    border: var(--border-base-width) solid var(--theme-part-color);
+    background-color: var(--theme-part-color);
+    border-radius: var(--border-min-radius);
+    color: var(--text-active-color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+.form_button:hover{
+    border: var(--border-base-width) solid var(--theme-part-color);
+    background-color: var(--theme-background-color);
+    color: var(--text-main-color);
+}
+.form_icon_button{
+    width: var(--header-icon-size);
+    height: var(--header-icon-size);
+    margin-left: var(--element-margin);
+    box-sizing: border-box;
+    border: var(--border-base-width) solid var(--theme-part-color);
+    border-radius: var(--border-icon-radius);
+}
+.form_file_select_item{
+    display: flex;
+    grid-template-columns: 1fr var(--file-item-button-width);
+    grid-gap: var(--element-gap);
+}
+.form_file_select_button{
+    width: var(--file-item-button-width);
+    height: 44px;
+    margin-bottom: var(--element-margin);
+    font-size: var(--main-text-size);
+    box-sizing: border-box;
+    border: var(--border-base-width) solid var(--theme-part-color);
+    background-color: var(--theme-part-color);
+    border-radius: var(--border-min-radius);
+    color: var(--text-active-color);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: background-color 0.5s ease, color 0.5s ease;
+}
+.form_file_select_button:hover{
+    border: var(--border-base-width) solid var(--theme-part-color);
+    background-color: var(--theme-background-color);
+    color: var(--text-main-color);
+}
+
+/*响应式*/
+@media (max-width: 700px), (max-device-width: 700px){
+    /*表单弹窗*/
+    .form_popup_content{
+        width: calc( 100% - var(--element-margin) * 2 );
+    }
 }
