--- a/sources/templates/file_system/comp_popup_file_add.html
+++ b/sources/templates/file_system/comp_popup_file_add.html
@@ -1,39 +1,39 @@
 <div class="popup_container_gray hidden" id="file_add_popup_overlay">
     <div class="form_popup_content" id="file_add_content">
-        <div class="file_add_header">
-            <a class="file_add_header_text" id="file_add_header_text">新增文件</a>
-            <img class="file_add_icon" src="/sources?filename=icons/add_folder_blue.png" id="file_add_icon">
+        <div class="form_popup_header">
+            <a class="form_popup_header_text" id="file_add_header_text">新增文件</a>
+            <img class="form_icon_button" src="/sources?filename=icons/add_folder_blue.png" id="file_add_icon">
         </div>
-        <form class="file_add_form" id="file_add_form">
-            <label for="file_add_name" class="file_add_label">文件名</label>
-            <input id="file_add_name" type="text" required placeholder="请输入文件名" class="file_add_field">
-            <label for="file_add_folder_select" class="file_add_label">文件夹</label>
-            <select id="file_add_folder_select" required class="file_add_choose">
+        <form class="form_popup_main" id="file_add_form">
+            <label for="file_add_name" class="form_field_label">文件名</label>
+            <input id="file_add_name" type="text" required placeholder="请输入文件名" class="form_input_field">
+            <label for="file_add_folder_select" class="form_field_label">文件夹</label>
+            <select id="file_add_folder_select" required class="form_choose_field">
             </select>
-            <label for="file_add_select" class="file_add_label">文件</label>
-            <div class="file_add_item">
-                <input id="file_add_select" type="text" required readonly placeholder="请选择文件" class="file_add_field">
+            <label for="file_add_select" class="form_field_label">文件</label>
+            <div class="form_file_select_item">
+                <input id="file_add_select" type="text" required readonly placeholder="请选择文件" class="form_input_field">
                 <input id="file_add_select_element" type="file" placeholder="请选择文件" class="hidden">
-                <input id="file_add_item_button" type="button" value="选择文件" class="file_add_item_button">
+                <input id="file_add_item_button" type="button" value="选择文件" class="form_file_select_button">
             </div>
-            <div class="file_button_row">
-                <div class="file_button_panel spin_holder" id="file_add_button_panel">
-                    <input id="file_add_confirm" type="submit" value="确认" class="file_add_button">
+            <div class="form_button_row">
+                <div class="form_button_spinner spin_holder" id="file_add_button_panel">
+                    <input id="file_add_confirm" type="submit" value="确认" class="form_button">
                 </div>
-                <input id="file_add_cancel" type="button" value="取消" class="file_add_button">
+                <input id="file_add_cancel" type="button" value="取消" class="form_button">
             </div>
         </form>
-        <form class="file_add_form hidden" id="folder_add_form">
-            <label for="folder_add_name" class="file_add_label">文件夹名</label>
-            <input id="folder_add_name" type="text" required placeholder="请输入文件夹名" class="file_add_field">
-            <label for="folder_add_folder_select" class="file_add_label">文件夹</label>
-            <select id="folder_add_folder_select" required class="file_add_choose">
+        <form class="form_popup_main hidden" id="folder_add_form">
+            <label for="folder_add_name" class="form_field_label">文件夹名</label>
+            <input id="folder_add_name" type="text" required placeholder="请输入文件夹名" class="form_input_field">
+            <label for="folder_add_folder_select" class="form_field_label">文件夹</label>
+            <select id="folder_add_folder_select" required class="form_choose_field">
             </select>
-            <div class="file_button_row">
-                <div class="file_button_panel spin_holder" id="folder_add_button_panel">
-                    <input id="folder_add_confirm" type="submit" value="确认" class="file_add_button">
+            <div class="form_button_row">
+                <div class="form_button_spinner spin_holder" id="folder_add_button_panel">
+                    <input id="folder_add_confirm" type="submit" value="确认" class="form_button">
                 </div>
-                <input id="folder_add_cancel" type="button" value="取消" class="file_add_button">
+                <input id="folder_add_cancel" type="button" value="取消" class="form_button">
             </div>
         </form>
     </div>
