--- a/sources/templates/file_system/page_file_system.html
+++ b/sources/templates/file_system/page_file_system.html
@@ -16,7 +16,7 @@
     </div>
     <div class="file_sys_body" id="file_sys_body">
         <div class="file_sys_menu" id="file_sys_menu">
-            <button class="file_sys_menu_button clickable" id="file_add_pop_button">+上传文件</button>
+            <button class="file_sys_menu_button clickable" id="file_add_pop_button">上传文件/创建文件夹</button>
             <dd class="file_sys_menu_list">
                 <dl class="file_sys_menu_row">
                     <div class="file_sys_menu_label">
