--- a/sources/templates/file_system/comp_popup_text_add.html
+++ b/sources/templates/file_system/comp_popup_text_add.html
@@ -1,5 +1,5 @@
 <div class="popup_container_gray hidden" id="text_add_popup_overlay">
-    <div class="form_popup_content" id="text_add_content">
+    <div class="form_wide_content" id="text_add_content">
         <div class="form_popup_header">
             <a class="form_popup_header_text">新增文本</a>
         </div>
@@ -10,7 +10,7 @@
             <select id="text_add_folder_select" required class="form_choose_field">
             </select>
             <label class="form_field_label">正文</label>
-            <div id="text_tinymce_field" class="form_tinymce_field"></div>
+            <div id="text_add_mce_field" class="form_tinymce_field"></div>
             <div class="form_button_row">
                 <div class="form_button_spinner spin_holder" id="text_add_button_panel">
                     <input id="text_add_confirm" type="submit" value="确认" class="form_button">
