--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -14,6 +14,10 @@
     {% include 'common/comp_popup_message.html' %}
     {% include 'common/comp_popup_confirm.html' %}
     {% include 'common/comp_popup_image.html' %}
+    {% include 'file_system/comp_popup_file_add.html'%}
+    {% include 'file_system/comp_popup_file_control.html'%}
+    {% include 'file_system/comp_popup_file_edit.html' %}
+    {% include 'file_system/comp_popup_text_display.html' %}
     {% include 'file_system/comp_popup_text_add.html' %}
 {% endblock %}
 
