--- a/sources/static/css/common/comp_popup_form.css
+++ b/sources/static/css/common/comp_popup_form.css
@@ -15,6 +15,24 @@
     /*侧边栏列表栏，隐藏滚动条*/
     width: 0px;
 }
+.form_wide_content{
+    width: 75%;
+    max-width: 920px;
+    max-height: calc( 100% - var(--element-margin) * 2 );
+    background-color: white;
+    border: 2px solid var(--theme-part-color);
+    display: flex;
+    flex-direction: column;
+    padding: var(--element-gap);
+    border-radius: var(--border-radius);
+    box-sizing: border-box;
+    transition: height 1s ease, width 1s ease;
+    overflow-y: auto;
+}
+.form_wide_content::-webkit-scrollbar{
+    /*侧边栏列表栏，隐藏滚动条*/
+    width: 0px;
+}
 .form_popup_header{
     width: 100%;
     height: 54px;
@@ -59,8 +77,7 @@
     padding-left: var(--element-margin);
     padding-right: var(--element-margin);
     border-radius: var(--border-min-radius);
-    border-color: var(--text-main-color);
-    border-width: var(--border-base-width);
+    border: var(--border-base-width) solid var(--text-remark-color);
     box-sizing: border-box;
     font-family: 'poppins';
 }
@@ -72,10 +89,9 @@
     padding-left: var(--element-margin);
     padding-right: var(--element-margin);
     border-radius: var(--border-min-radius);
-    border-color: var(--text-main-color);
+    border: var(--border-base-width) solid var(--text-remark-color);
     box-sizing: border-box;
     font-family: 'poppins';
-    border-width: var(--border-base-width);
 }
 .form_choose_item{
     width: 100%;
@@ -158,10 +174,16 @@
 .tox-collection__item-label{
     min-width: 100px;
 }
+.form_input_border{
+    border: var(--border-base-width) solid var(--text-remark-color);
+}
 /*响应式*/
 @media (max-width: 700px), (max-device-width: 700px){
     /*表单弹窗*/
     .form_popup_content{
+        width: calc( 100% - var(--element-margin) * 2 );
+    }
+    .form_wide_content{
         width: calc( 100% - var(--element-margin) * 2 );
     }
 }
