--- a/sources/templates/file_system/comp_popup_file_control.html
+++ b/sources/templates/file_system/comp_popup_file_control.html
@@ -1,22 +1,22 @@
 <div class="popup_fixed_container hidden" id="file_control_overlay">
     <div class="file_control_content" id="file_control_content">
-        <div class="file_control_item clickable" id="copy_full_url_button">
+        <div class="file_control_item clickable spin_holder" id="copy_full_url_button">
             <img class="file_control_icon" src="/sources?filename=icons/link.png">
             <div class="file_control_text">复制完整链接</div>
         </div>
-        <div class="file_control_item clickable" id="copy_part_url_button">
+        <div class="file_control_item clickable spin_holder" id="copy_part_url_button">
             <img class="file_control_icon" src="/sources?filename=icons/link.png">
             <div class="file_control_text">复制相对路径</div>
         </div>
-        <div class="file_control_item clickable" id="file_download_button">
+        <div class="file_control_item clickable spin_holder" id="file_download_button">
             <img class="file_control_icon" src="/sources?filename=icons/download.png">
             <div class="file_control_text">下载</div>
         </div>
-        <div class="file_control_item clickable" id="file_edit_button">
+        <div class="file_control_item clickable spin_holder" id="file_edit_button">
             <img class="file_control_icon" src="/sources?filename=icons/edit.png">
             <div class="file_control_text">编辑</div>
         </div>
-        <div class="file_control_item clickable" id="file_delete_button">
+        <div class="file_control_item clickable spin_holder" id="file_delete_button">
             <img class="file_control_icon" src="/sources?filename=icons/delete.png">
             <div class="file_control_text">删除</div>
         </div>
