--- a/sources/templates/file_system/comp_popup_text_display.html
+++ b/sources/templates/file_system/comp_popup_text_display.html
@@ -1,8 +1,14 @@
 <div class="popup_container_gray hidden" id="text_display_popup_overlay">
     <div class="form_wide_content" id="text_display_content">
         <div class="form_popup_main" id="text_display_form">
-            <input id="text_display_name" type="text" required placeholder="请输入文件名" class="form_input_field">
+            <input id="text_display_name" type="text" readonly placeholder="请输入文件名" class="form_input_field">
             <div id="text_display_mce_field" class="form_tinymce_field"></div>
+            <div class="form_button_row">
+                <div class="form_button_spinner spin_holder" id="text_display_button_panel">
+                    <input id="text_edit_button" type="submit" value="编辑" class="form_button">
+                </div>
+                <input id="text_close_button" type="button" value="关闭" class="form_button">
+            </div>
         </div>
     </div>
 </div>
