--- a/sources/templates/common/comp_popup_image.html
+++ b/sources/templates/common/comp_popup_image.html
@@ -5,19 +5,19 @@
         </div>
         <div class="image_display_bar" id="image_display_bar">
             <div class="image_display_icon_div" id="image_close_button">
-                <img class="image_display_icon" src="/sources?filename=icons/close.png">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/close.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_edit_button">
-                <img class="image_display_icon" src="/sources?filename=icons/edit_white.png">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/edit_white.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_download_button">
-                <img class="image_display_icon" src="/sources?filename=icons/download_white.png">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/download_white.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_last_button">
-                <img class="image_display_icon" src="/sources?filename=icons/last_page.png">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/last_page.png') }}">
             </div>
             <div class="image_display_icon_div" id="image_next_button">
-                <img class="image_display_icon" src="/sources?filename=icons/next_page.png">
+                <img class="image_display_icon" src="{{ url_for('static', filename='icons/next_page.png') }}">
             </div>
         </div>
     </div>
