--- a/sources/templates/login/page_login.html
+++ b/sources/templates/login/page_login.html
@@ -2,7 +2,7 @@
     <div class="comp_background_image"></div>
     <div class="login_panel">
         <div class="login_logo">
-            <img src="/sources?filename=icons/logo.png" class="login_logo_img">
+            <img src="{{ url_for('static', filename='icons/logo.png') }}" class="login_logo_img">
         </div>
         <form class="login_form" id="login_form">
             <label for="account" class="login_label">帐号</label>
